--- a/stat.html
+++ b/stat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Environmental Stats Dashboard</title>
-    <link rel="stylesheet" href="stats_style.css">
+    <link rel="stylesheet" href="i.css">
     </head>
 <body>
     <div class="stats-dashboard">
