--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <nav>
     <ul>
-      <li><a href="brandkit.html">Home</a></li>
+      <li><a href="brandkit.html">brandkit</a></li>
       <li><a href="our coustomers.html">Customers</a></li>
       <li><a href="stat.html">Stats</a></li>
       <li><a href="GRAPH.HTML">Graphs</a></li>
